...

  return (
    <View style={styles.container} accessibilityLabel="app-root">
      <StatusBar translucent={true} />
      <View style={[styles.row, styles.alignCenter, styles.header]}>
        <Image source={require('../assets/intercom.png')} style={styles.logo} />
        <Text style={styles.title}>Intercom Example App</Text>
      </View>
      <View style={styles.stickyHeaderContainer}>
        <Text
          style={styles.text}
          accessibilityLabel={loggedUser ? 'authenticated' : 'unauthenticated'}
        >
...
        <Text style={styles.text}>Unread messages count: {count}</Text>
      </View>
      <ScrollView>
        <Button
          intercom_accessibilityLabel="login-unidentified"
          intercom_disabled={loggedUser}
          intercom_title="Login as an Unidentified User"
          intercom_onPress={() => {
            Intercom.loginUnidentifiedUser()
              .then(() => {
                console.log('logged in');
                setLoggedUser(true);
                AsyncStorage.setItem(AUTK_KEY, 'true');
...
            } else {
              showIncorrectFieldMessage('Email');
            }
          }}
        />
        <Button
          intercom_accessibilityLabel="display-messenger"
          intercom_disabled={!loggedUser}
          intercom_title="Present Intercom"
          intercom_onPress={() => {
            Intercom.present();
          }}
        />
        <Button
          intercom_accessibilityLabel="display-message-composer"
          intercom_disabled={!loggedUser}
          intercom_title="Present Message Composer"
          intercom_onPress={() => {
            Intercom.presentMessageComposer('initial message');
          }}
        />
        <Button
          intercom_accessibilityLabel="display-help-center"
          intercom_disabled={!loggedUser}
          intercom_title="Present Help Center"
          intercom_onPress={() => {
            Intercom.presentSpace(Space.helpCenter);
          }}
        />
...
            let helpCenterCollectionsContent =
              IntercomContent.helpCenterCollectionsWithIds(COLLECTIONS);
            Intercom.presentContent(helpCenterCollectionsContent);
          }}
        />
        <Button
          intercom_accessibilityLabel="fetch-help-center-collections"
          intercom_disabled={!loggedUser}
          intercom_title="Fetch Help Center Collections"
          intercom_onPress={() => {
            Intercom.fetchHelpCenterCollections()
              .then((items) => {
                console.log(items);
...
          onChangeText={(val) => {
            setArticleId(val);
          }}
          placeholder="Article Id"
        />
        <Button
          intercom_accessibilityLabel="display-article"
          intercom_disabled={!loggedUser}
          intercom_title="Display Article"
          intercom_onPress={() => {
            if (articleId) {
              let articleContent =
                IntercomContent.articleWithArticleId(articleId);
...
            } else {
              showEmptyAlertMessage('User Name');
            }
          }}
        />
        <Button
          intercom_accessibilityLabel="get-unreads"
          intercom_disabled={!loggedUser}
          intercom_title="Get Unread Conversation Count"
          intercom_onPress={() => {
            Intercom.getUnreadConversationCount().then((response) =>
              Alert.alert('Unread Conversation count is', response.toString())
            );
...
          }}
        />
        <Button
          intercom_title={`Toggle In Launcher Visibility: ${
            launcherVisibility ? Visibility.VISIBLE : Visibility.GONE
          }`}
          intercom_accessibilityLabel="toggle-launcher-visibility"
          intercom_onPress={() => {
            Intercom.setLauncherVisibility(
              launcherVisibility ? Visibility.GONE : Visibility.VISIBLE
            ).then(() => setLauncherVisibility((v) => !v));
          }}
        />
        <Button
          intercom_accessibilityLabel="set-bottom-padding"
          intercom_title={`Increase Bottom Padding: ${bottomPadding}`}
          intercom_onPress={() => {
            const paddingToSet =
              bottomPadding + 10 > 300 ? 0 : bottomPadding + 10;
            Intercom.setBottomPadding(paddingToSet).then(() =>
              setBottomPadding(paddingToSet)
...
                showErrorAlert(e);
                console.error(e);
              });
          }}
        />
        <Button
          intercom_accessibilityLabel="logout"
          intercom_disabled={!loggedUser}
          intercom_title="Logout user"
          intercom_onPress={() => {
            Intercom.logout().then(() => {
              AsyncStorage.removeItem(AUTK_KEY);
              setLoggedUser(false);
...
